--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -48,9 +48,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build image
-        run: 
-          cd QTLogger
-          docker build --file Dockerfile --tag $IMAGE_NAME .
+        run: docker build --file ./QTLogger/Dockerfile --tag $IMAGE_NAME
 
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
