--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -48,7 +48,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build image
-        run: docker build --file ./QTLogger/Dockerfile --tag $IMAGE_NAME
+        run: docker build --tag $IMAGE_NAME /home/runner/work/StonkAtlas/StonkAtlas/QTLogger
 
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
