--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -32,7 +32,7 @@ jobs:
             docker-compose --file docker-compose.test.yml build
             docker-compose --file docker-compose.test.yml run sut
           else
-            docker build . --file Dockerfile
+            docker build ./QTLogger --file Dockerfile
           fi
 
   # Push image to GitHub Packages.
@@ -48,7 +48,9 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build image
-        run: docker build --tag $IMAGE_NAME /home/runner/work/StonkAtlas/StonkAtlas/QTLogger
+        run: |
+          echo "Building Docker Image"
+          docker build ./QTLogger --file Dockerfile --tag $IMAGE_NAME
 
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
