--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -51,7 +51,8 @@ jobs:
       - name: Build image
         run: |
           echo "Building Docker Image"
-          docker build ./QTLogger --file Dockerfile --tag $IMAGE_NAME
+          cd QTLogger
+          docker build . --file Dockerfile --tag $IMAGE_NAME
 
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
