--- a/QTLogger/Dockerfile
+++ b/QTLogger/Dockerfile
@@ -21,4 +21,4 @@ WORKDIR /app
 #copy our built files to app/out
 COPY --from=build-env /app/out .
 #Specify how to start the app, takes an array that transforms into a command-line invocation with arguments
-ENTRYPOINT ["StonkAtlas.QTLogger.exe", ""]
+ENTRYPOINT ["StonkAtlas.QTLogger", ""]
